# HARalyzer

./: .gitignore  LICENSE  README.md  _diff.txt  export-macos.sh  export.bat  export.sh  index.html  package-lock.json  package.json  setup-macos.sh  setup.bat  setup.sh  vite.config.ts
docs/: index.html
sample/: example.har
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  site_structure.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/chat/: agent_state.rs  deobfuscate.rs  embeds.rs  entry_format.rs  extra_tools.rs  http_tools.rs  knowledge.rs  live_http_log.rs  mod.rs  output_limits.rs  python_runtime.rs  script_quality.rs  script_workspace.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/har/: exporter.rs  js_analyzer.rs  jwt.rs  mod.rs  parser.rs  types.rs
src-tauri/src/llm/: agent_limits.rs  context_compact.rs  mod.rs  model_context.rs  model_metadata.rs  model_router.rs
src/components/analysis/: AnalysisPanel.tsx  ChatInputBar.tsx  ChatMessageList.tsx  ChatPanel.tsx  ChunkListView.tsx
src/components/entries/: BodyViewer.tsx  CodeScrollArea.tsx  EntryDetailPanel.tsx  EntryEditToolbar.tsx  EntryJsViewer.tsx  EntryOverviewTab.tsx  EntryTable.tsx  JsCodeViewer.tsx  ResourceFilterBar.tsx
src/components/ui/: badge.tsx  (+9 more)
src/hooks/: use-har-edit.ts  use-har-file-open.ts  use-tauri-events.ts
src/lib/: api.ts  entry-copy.ts  entry-filters.ts  entry-overview.ts  format-json.ts  highlight.ts  mime.ts  text-encoding.ts  types.ts  utils.ts
src/store/: app-store.ts
(+4 files in other folders)
